tests/invalid/generated_binop_bitor_str_float/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: str = "hello"
    y: float = 1.0
    z = x | y
